--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,15 @@ after_success:
   - docker push retrofire/multi-nginx
   - docker push retrofire/multi-server
   - docker push retrofire/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-central-1
+  app: multi-docker
+  env: Multidocker-env
+  bucket_name: elasticbeanstalk-eu-central-1-272137328470
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
